# 1-2ndYearProjects

Arcade/: Makefile
Arcade/doc/: doc.odt
Arcade/lib/: lib.txt
Arcade/src/: borne_arcade.cpp  borne_arcade.hpp  main.cpp  openlibrary.cpp  openlibrary.hpp
Arcade/src/core/: core.cpp  core.hpp  enum.hpp  struct.hpp
Arcade/src/game/: IGame.hpp  Makefile
Asmminlibc/: Makefile  include.inc
Asmminlibc/src/: memcpy.asm  memset.asm  strchr.asm  strcmp.asm  strlen.asm  strncmp.asm
Malloc/: Makefile
Malloc/include/: mlloc.h
Malloc/src/: my_calloc.c  my_free.c  my_malloc.c  my_realloc.c  my_reallocarray.c
Myftp/: Makefile  main.c  usage.txt
Myftp/include/: my_ftp.h
Myftp/src/: add_message.c  linked_list.c  my_free.c  new_client.c  parser.c  print_info.c  read_cmd.c  serveur.c  socket.c
Myftp/src/cmd/: cdup_cmd.c  (+13 more)
Mymarvin/: job_dsl.groovy  my_marvin.yml
Myteams/: Makefile
Myteams/include/: client.h  serveur.h
Myteams/tests/: Makefile  redirect_criterion.c  unit.c  unit_tests
Popeye/: docker-compose.yml
Popeye/poll/: Dockerfile
Popeye/result/: Dockerfile
Popeye/worker/: Dockerfile
Pushswapchecker/: Makefile  pushswap_checker.hs
Tekspice/: CMakeLists.txt  main.cpp
Tekspice/src/: system.cpp  system.hpp
Tekspice/src/component/: IComponent.hpp
Tekspice/src/component/gates/: AComponent.cpp  AComponent.hpp  false.cpp  false.hpp  input.cpp  input.hpp  output.cpp  output.hpp  true.cpp  true.hpp
Tekspice/src/error/: error.cpp  error.hpp
Tekspice/src/factory/: factory.cpp  factory.hpp
Tekspice/src/parsing/: parsing.cpp  parsing.hpp
(+49 files in other folders)
